--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "14.2.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "use-recaptcha-react": "workspace:*"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
