--- a/turbo.json
+++ b/turbo.json
@@ -9,7 +9,7 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**", "_dist/**"]
+      "outputs": [".next/**", "!.next/cache/**", "_build/**"]
     },
     "lint": {
       "dependsOn": ["^lint"]
