--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "use-recaptcha-react": "workspace:*"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.0.3",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^18",
