--- a/packages/use-recaptcha-react/package.json
+++ b/packages/use-recaptcha-react/package.json
@@ -16,19 +16,45 @@
   },
   "size-limit": [
     {
-      "path": "./_build/cjs/source/main/*.js"
+      "name": "cjs main",
+      "path": "./_build/cjs/source/main/*.js",
+      "gzip": true
     },
     {
-      "path": "./_build/es6/source/main/*.js"
+      "name": "cjs all",
+      "path": "./_build/cjs/source/**/*.js",
+      "gzip": true
+    },
+    {
+      "name": "cjs providers",
+      "path": "./_build/cjs/source/providers/*.js",
+      "gzip": true
+    },
+    {
+      "name": "esm all",
+      "path": "./_build/es6/source/**/*.js",
+      "gzip": true
+    },
+    {
+      "name": "esm main",
+      "path": "./_build/es6/source/main/*.js",
+      "gzip": true
+    },
+    {
+      "name": "esm providers",
+      "path": "./_build/es6/source/providers/*.js",
+      "gzip": true
     }
   ],
   "scripts": {
     "dev": "swc ./source -d ./_build/es6 -C module.type=es6 -w & swc ./source -d ./_build/cjs -C module.type=commonjs -w & tsc -w --pretty --skipLibCheck",
     "build": "swc ./source -d ./_build/es6 -C module.type=es6 & swc ./source -d ./_build/cjs -C module.type=commonjs & tsc --pretty --skipLibCheck",
-    "size": "size-limit"
+    "size": "size-limit",
+    "size:why": "size-limit --why"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@size-limit/esbuild-why": "^11.1.6",
     "@size-limit/preset-small-lib": "^11.1.6",
     "@swc/cli": "^0.5.0",
     "@swc/core": "^1.9.2",
