--- a/packages/use-recaptcha-react/package.json
+++ b/packages/use-recaptcha-react/package.json
@@ -63,7 +63,7 @@
     "size-limit": "^11.1.6",
     "typescript": "5.5.4"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^18",
     "react-dom": "^18.3.1"
   }
