chore: adds infos to package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "use-recaptcha-react",
+  "name": "use-captcha-react",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "build": "turbo build",
