--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
     "next": "14.2.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "use-recaptcha-react": "workspace:*"
+    "use-captcha-react": "workspace:*"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.0.3",
