--- a/packages/use-captcha-react/tsconfig.json
+++ b/packages/use-captcha-react/tsconfig.json
@@ -9,5 +9,5 @@
     "emitDeclarationOnly": true
   },
   "include": ["./source/**/*.ts", "./source/**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "_build"]
 }
