--- a/packages/use-captcha-react/package.json
+++ b/packages/use-captcha-react/package.json
@@ -57,7 +57,7 @@
     "typescript": "5.5.4"
   },
   "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18.3.1"
+    "react": ">=18 || <= 19",
+    "react-dom": ">=18 || <= 19"
   }
 }
