build: creates version 1.0.0-beta

--- a/packages/use-captcha-react/package.json
+++ b/packages/use-captcha-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-captcha-react",
-  "version": "0.0.3",
+  "version": "1.0.0-beta",
   "author": {
     "email": "gabrieljesus9221@gmail.com",
     "name": "Gabriel Jesus",
