--- a/packages/use-captcha-react/tsup.config.json
+++ b/packages/use-captcha-react/tsup.config.json
@@ -1,5 +1,9 @@
 {
-  "entry": ["./source/**/*.{ts,tsx}"],
+  "entry": {
+    "index": "source/main/index.tsx",
+    "googleV2": "source/providers/GoogleReCaptchaV2Provider.tsx",
+    "turnstile": "source/providers/CloudflareTurnstileProvider.tsx"
+  },
   "splitting": false,
   "sourcemap": true,
   "clean": true,
@@ -7,7 +11,7 @@
   "format": ["cjs", "esm"],
   "target": "es2018",
   "dts": true,
-  "minify": true,
+  "minify": false,
   "treeshake": true,
   "skipNodeModulesBundle": true,
   "ignoreWatch": ["_build", ".turbo", "node_modules", "scripts"]
