feat: adds types versions into package json to support node module resolution

--- a/packages/use-captcha-react/package.json
+++ b/packages/use-captcha-react/package.json
@@ -24,6 +24,13 @@
     "validation",
     "bot"
   ],
+  "typesVersions": {
+    "*": {
+      "googleReCaptchaV2": ["_build/googleV2.d.ts"],
+      "cloudflareTurnstile": ["_build/turnstile.d.ts"],
+      "hcaptcha": ["_build/hcaptcha.d.ts"]
+    }
+  },
   "private": false,
   "main": "./_build/index.js",
   "types": "./_build/index.d.ts",
