--- a/packages/use-captcha-react/tsup.config.json
+++ b/packages/use-captcha-react/tsup.config.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://cdn.jsdelivr.net/npm/tsup/schema.json",
   "entry": {
     "index": "source/main/index.tsx",
     "googleV2": "source/providers/GoogleReCaptchaV2Provider.tsx",
