--- a/packages/use-captcha-react/package.json
+++ b/packages/use-captcha-react/package.json
@@ -45,6 +45,13 @@
     "react": ">=18 || <= 19",
     "react-dom": ">=18 || <= 19"
   },
+  "typesVersions": {
+    "*": {
+      "googleReCaptchaV2": ["_build/googleV2.d.ts"],
+      "cloudflareTurnstile": ["_build/turnstile.d.ts"],
+      "hcaptcha": ["_build/hcaptcha.d.ts"]
+    }
+  },
   "main": "./_build/index.cjs",
   "types": "./_build/index.d.ts",
   "module": "./_build/index.js",
